application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-service
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
