application/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: api.dev.devopslite.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin-service
                port:
                  number: 80
